--- a/home/home.html
+++ b/home/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+<script type="text/javascript" src="../webOSTVjs-1.2.0/webOSTV.js"></script>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -12,10 +14,29 @@
     <script type="text/javascript" src="../js/jquery.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/all.min.css" />
+    
     <title>Home</title>
 </head>
 
 <body>
+<div class="main-container">
+        <div class="loadingio-spinner-spinner-rexyx9adxl spinner" id="spinner_display_id">
+            <div class="ldio-eon67kjyqwt">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+</div>
  <div class="container-fluid">
  <div class="row">
  <div class="col-12" style="    position: fixed;
@@ -33,11 +54,13 @@
 
  </div>
  </div>
+ <!-- 
   <p class="appTxtTop ml-3">Recent Channels</p>
   <div id="container-fluid_id_all" class="container-fluid mt-5">
 
  
  </div>
+  -->
   <p class="appTxt ml-3">All Channels</p>
    <div id="container-fluid_id" class="container-fluid mt-5">
 
